# monopoly-ai-game

./: .dockerignore  .env.example  .gitignore  AGENTS.md  ART_PLAN.md  Makefile  PLANS.md  README.md  SMOKE_REPORT.md  docker-compose.yml  package.json  pnpm-lock.yaml  pnpm-workspace.yaml  pyproject.toml  uv.toml
docs/: local-mcp.md  (+6 more)
services/api/: Dockerfile  alembic.ini  package.json  pyproject.toml  sitecustomize.py
services/api/alembic/: env.py
services/api/app/: __init__.py  main.py
services/api/scripts/: build_rag_index.py  generate_openapi.py  live_codex_ai_smoke.py  live_codex_ai_strategy_smoke.py  local_mcp_server.py  refresh_rag_index.py  run_api.py  run_simulation.py  verify_concurrency.py  verify_game_api.py  verify_rejected_actions.py  verify_snapshots.py
services/api/tests/: test_actions.py  test_ai_context_pack.py  test_ai_decision_schema.py  test_ai_enforcement.py  test_ai_memory_compaction.py  test_ai_orchestrator.py  test_ai_profiles.py  test_ai_step_endpoint.py  test_alembic.py  test_atomic.py  test_concurrency.py  test_configuration.py  test_contract_classic_rules.py  test_contract_execution.py  test_cors.py  test_database.py  test_debt.py  test_event_persistence.py  test_freeform_structured_deals.py  test_game_api.py  test_instrument_primitives.py  test_logging.py  test_mechanics.py  test_negotiation_cutoffs.py  test_negotiation_state_machine.py  test_phases.py  test_reducer.py  test_rejected_action_audit.py  test_rng.py  test_scaffold.py  test_simulation.py  test_stage_10_1_backend_unit_expansion.py  test_stage_10_2_backend_integration.py  test_stage_10_3_property_invariants.py  test_stage_10_6_smoke_scripts.py  test_stage_11_1_rules_correctness.py  test_stage_11_2_ai_audit_review.py  (+10 more)
(+145 files in other folders)
