[project]
name = "monopoly-ai-game-api"
version = "0.0.0"
description = "FastAPI service scaffold for the local Monopoly AI research game."
requires-python = "==3.14.6"
dependencies = [
    "asyncpg>=0.31.0",
    "fastapi>=0.124.0",
    "uvicorn[standard]>=0.38.0",
]

[dependency-groups]
dev = [
    "basedpyright>=1.36.0",
    "httpx>=0.28.0",
    "pytest>=9.0.0",
    "ruff>=0.14.0",
]

[tool.pytest.ini_options]
pythonpath = ["."]
testpaths = ["tests"]

[tool.ruff]
line-length = 100
target-version = "py314"

[tool.basedpyright]
include = ["app", "scripts", "tests"]
pythonVersion = "3.14"
typeCheckingMode = "basic"
reportMissingTypeStubs = false
